# riftd

./: CODE.md  Cargo.toml  PHASE34_PLAN.md  PHASE35_PLAN.md  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md
android/: .gitignore  README.md  build-rust-android.sh  build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/riftmobile/: MainActivity.kt  RiftNative.kt
android/app/src/main/res/values/: themes.xml
benches/: README.md
clients/rift-qt/: CMakeLists.txt  README.md
clients/rift-qt-win/: CMakeLists.txt  README.md
clients/rift-qt-win/resources/: rift.rc
clients/rift-qt-win/src/: MainWindow.cpp  MainWindow.h  RiftBackend.cpp  RiftBackend.h  RiftEventsModel.cpp  RiftEventsModel.h  RiftPeersModel.cpp  RiftPeersModel.h  main.cpp
clients/rift-qt/qml/: Main.qml
clients/rift-qt/resources/: org.rift.Rift.desktop
clients/rift-qt/src/: RiftBackend.cpp  RiftBackend.h  RiftEventsModel.cpp  RiftEventsModel.h  RiftPeersModel.cpp  RiftPeersModel.h  main.cpp
crates/rift-core/: Cargo.toml
crates/rift-core/src/: error.rs  identity.rs  invite.rs  keystore.rs  lib.rs  message.rs  noise.rs
crates/rift-dht/: Cargo.toml
crates/rift-dht/src/: lib.rs
crates/rift-discovery/: Cargo.toml
crates/rift-discovery/src/: lib.rs
crates/rift-media/: Cargo.toml
crates/rift-media/benches/: media_opus.rs
crates/rift-media/src/: lib.rs
crates/rift-mesh/: Cargo.toml
crates/rift-mesh/benches/: mesh_encrypt_decrypt.rs
crates/rift-mesh/src/: lib.rs
crates/rift-metrics/: Cargo.toml
crates/rift-metrics/src/: lib.rs
crates/rift-nat/: Cargo.toml
crates/rift-nat/src/: lib.rs
crates/rift-protocol/: Cargo.toml
crates/rift-protocol/benches/: mesh_encode_decode.rs
crates/rift-protocol/src/: lib.rs
crates/rift-sdk/: Cargo.toml  rift.h
crates/rift-sdk/src/: android_jni.rs  ffi.rs  lib.rs
