[package]
name = "rift-dht"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
futures = "0.3"
libp2p = { version = "0.53", features = ["kad", "tcp", "dns", "noise", "yamux", "tokio", "identify", "macros"] }
rift-core = { path = "../rift-core" }
