[package]
name = "rift-mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rift-core = { path = "../rift-core" }
rift-discovery = { path = "../rift-discovery" }
rift-nat = { path = "../rift-nat" }
rift-protocol = { path = "../rift-protocol" }
rift-metrics = { path = "../rift-metrics" }
snow = "0.9"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
