[package]
name = "rift-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tracing = "0.1"
rift-core = { path = "../rift-core" }
rift-protocol = { path = "../rift-protocol" }
rift-discovery = { path = "../rift-discovery" }
rift-nat = { path = "../rift-nat" }
rift-mesh = { path = "../rift-mesh" }
rift-media = { path = "../rift-media" }
rift-dht = { path = "../rift-dht" }
serde = { version = "1", features = ["derive"] }
hex = "0.4"
thiserror = "1"
toml = "0.8"

[features]
ffi = []
