[package]
name = "rift-sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tracing = "0.1"
rift-core = { path = "../rift-core" }
rift-protocol = { path = "../rift-protocol" }
rift-discovery = { path = "../rift-discovery" }
rift-nat = { path = "../rift-nat" }
rift-mesh = { path = "../rift-mesh" }
rift-media = { path = "../rift-media" }
rift-dht = { path = "../rift-dht" }
rift-metrics = { path = "../rift-metrics" }
serde = { version = "1", features = ["derive"] }
hex = "0.4"
thiserror = "1"
toml = "0.8"
hkdf = "0.12"
sha2 = "0.10"
serde_json = "1"
dirs = "5"
blake3 = "1"
jni = { version = "0.21", optional = true }
ndk-context = { version = "0.1", optional = true }

[features]
ffi = []
android = ["jni", "ndk-context"]
